set db and solid queue

--- a/config/database.yml
+++ b/config/database.yml
@@ -19,10 +19,31 @@ default: &default
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
+sqlite: &sqlite
+  adapter: sqlite3
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
 
 development:
-  <<: *default
-  database: coachy_development
+  primary: &primary_development
+    <<: *default
+    database: coachy_development
+    host: localhost
+    port: 5432
+    username: postgres
+    password: postgres
+  queue:
+    <<: *primary_development
+    database: coachy_development_queue
+    migrations_paths: db/queue_migrate
+  cache:
+    <<: *sqlite
+    database: storage/development_cache.sqlite3
+    migrations_paths: db/cache_migrate
+  cable:
+    <<: *sqlite
+    database: storage/development_cable.sqlite3
+    migrations_paths: db/cable_migrate
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -57,6 +78,10 @@ development:
 test:
   <<: *default
   database: coachy_test
+  host: localhost
+  port: 5432
+  username: postgres
+  password: postgres
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -85,7 +110,7 @@ production:
     username: coachy
     password: <%= ENV["COACHY_DATABASE_PASSWORD"] %>
   cache:
-    <<: *primary_production
+    <<: *sqlite
     database: coachy_production_cache
     migrations_paths: db/cache_migrate
   queue:
@@ -93,6 +118,6 @@ production:
     database: coachy_production_queue
     migrations_paths: db/queue_migrate
   cable:
-    <<: *primary_production
+    <<: *sqlite
     database: coachy_production_cable
     migrations_paths: db/cable_migrate
