--- a/config/cable.yml
+++ b/config/cable.yml
@@ -3,7 +3,10 @@
 # not a terminal started via bin/rails console! Add "console" to any action or any ERB template view
 # to make the web console appear.
 development:
-  adapter: async
+  adapter: solid_cable
+  connects_to:
+    database: 
+      writing: cable
 
 test:
   adapter: test
