--- a/config/database.yml
+++ b/config/database.yml
@@ -19,11 +19,6 @@ default: &default
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
-sqlite: &sqlite
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
-
 development:
   primary: &primary_development
     <<: *default
@@ -37,12 +32,12 @@ development:
     database: coachy_development_queue
     migrations_paths: db/queue_migrate
   cache:
-    <<: *sqlite
-    database: storage/development_cache.sqlite3
+    <<: *primary_development
+    database: coachy_development_cache
     migrations_paths: db/cache_migrate
   cable:
-    <<: *sqlite
-    database: storage/development_cable.sqlite3
+    <<: *primary_development
+    database: coachy_development_cable
     migrations_paths: db/cable_migrate
 
   # The specified database role being used to connect to PostgreSQL.
@@ -110,7 +105,7 @@ production:
     username: coachy
     password: <%= ENV["COACHY_DATABASE_PASSWORD"] %>
   cache:
-    <<: *sqlite
+    <<: *primary_production
     database: coachy_production_cache
     migrations_paths: db/cache_migrate
   queue:
@@ -118,6 +113,6 @@ production:
     database: coachy_production_queue
     migrations_paths: db/queue_migrate
   cable:
-    <<: *sqlite
+    <<: *primary_production
     database: coachy_production_cable
     migrations_paths: db/cable_migrate
